# ConsoleEngine_v2

./: CMakeLists.txt  README.md  main.cpp
Engine/: ConsoleEngine.cpp  ConsoleEngine.h
Engine/Core/InputSystem/: InputSystem.cpp  InputSystem.h
Engine/Core/RenderSystem/: Renderer.cpp  Renderer.h
Engine/Core/Scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Engine/Core/Window/: Window.cpp  Window.h
Engine/Runtime/Objects/: GameObject.cpp  GameObject.h
Engine/Runtime/Objects/Component/: Component.cpp  Component.h
Engine/Runtime/Objects/Component/DefaultComponents/Rendering/: CameraComponent.cpp  CameraComponent.h  SpriteRenderComponent.cpp  SpriteRenderComponent.h
Engine/Runtime/Utility/Color/: Color.cpp  Color.h
Engine/Runtime/Utility/Sprite/: Sprite.cpp  Sprite.h
Engine/Runtime/Utility/Vector/: Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h
Game/Assets/Textures/Debug/: T_Debug.txt
Game/Assets/Textures/Nature/: T_Grass.txt  T_Pond.txt
Game/Assets/Textures/Structures/: T_CampSite.txt  T_CampSite_Color.png~
Game/Assets/Textures/Tree/: T_Tree_Color.png~
Game/Player/: CameraController.cpp  CameraController.h
Game/Scripts/Player/: CameraController.cpp
